@@ -30,7 +30,7 @@ buildvcl := yes
 # Debugging options etc...
 
 debug   := yes
-profile := no
+profile := yes
 
 
 # endian, etc. support for other hardware
